--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deployz": "pnpm build && gh-pages -d dist"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.18",
+		"gh-pages": "^6.1.1",
 		"postcss": "^8.4.35",
 		"typescript": "^5.2.2",
 		"vite": "^5.1.6",
